# Flash-Card

./: .breakpoints  main.py  pyproject.toml
flashkard/: __init__.py  api.py  card.csv  project.sqlite3  views.py
flashkard/templates/: dashboard.html  index.html  landing.html  login.html  register.html  review.html
